syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.user;

// User Interface of the DistLedger Service

message BalanceRequest {
  string userId = 1;
  Timestamp prev = 2;
}

message BalanceResponse {
  int32 value = 1;
  Timestamp new = 2;
}

message CreateAccountRequest {
  string userId = 1;
  Timestamp prev = 2;
  int64 uid = 3;
}

message CreateAccountResponse {
  Timestamp ts = 1;
}

message DeleteAccountRequest {
  string userId = 1;
}

message DeleteAccountResponse {}

message TransferToRequest {
  string accountFrom = 1;
  string accountTo = 2;
  int32 amount = 3;
  Timestamp prev = 4;
  int64 uid = 5;
}

message TransferToResponse {
  Timestamp ts = 1;
}

service UserService {
  rpc balance(BalanceRequest) returns (BalanceResponse);
  rpc createAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc deleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);
  rpc transferTo(TransferToRequest) returns (TransferToResponse);
}
